--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.3.9",
     "@reduxjs/toolkit": "^2.8.1",
     "date-fns": "^4.1.0",
-    "expo": "~53.0.9",
-    "expo-clipboard": "^7.1.4",
+    "expo": "53.0.15",
+    "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.6",
     "expo-document-picker": "^13.1.6",
-    "expo-font": "~13.3.1",
+    "expo-font": "~13.3.2",
     "expo-image-picker": "^16.1.4",
-    "expo-linear-gradient": "^14.1.4",
-    "expo-linking": "~7.1.5",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.6",
     "expo-print": "^14.1.4",
-    "expo-router": "~5.0.6",
+    "expo-router": "~5.1.2",
     "expo-sharing": "^13.1.5",
-    "expo-splash-screen": "~0.30.8",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.4",
     "react-native-calendars": "^1.1312.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.0",
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0"
