--- a/package.json
+++ b/package.json
@@ -18,22 +18,23 @@
     "@react-navigation/drawer": "^7.3.9",
     "@reduxjs/toolkit": "^2.8.1",
     "date-fns": "^4.1.0",
-    "expo": "53.0.15",
+    "expo": "53.0.20",
     "expo-clipboard": "~7.1.5",
-    "expo-constants": "~17.1.6",
+    "expo-constants": "17.1.7",
     "expo-document-picker": "^13.1.6",
     "expo-font": "~13.3.2",
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "~7.1.6",
+    "expo-linking": "7.1.7",
     "expo-print": "^14.1.4",
-    "expo-router": "~5.1.2",
+    "expo-router": "5.1.4",
     "expo-sharing": "^13.1.5",
-    "expo-splash-screen": "~0.30.9",
+    "expo-splash-screen": "0.30.10",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.4",
+    "react-native": "0.79.5",
     "react-native-calendars": "^1.1312.1",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
