added payment feature

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
+    "eas-apk": "eas build --platform android --profile preview",
+    "eas-aab": "eas build --platform android --profile production",
+    "eas-ipa": "eas build --platform ios --profile production",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint"
