--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-localization": "~17.0.7",
     "expo-print": "~15.0.7",
     "expo-router": "~6.0.3",
     "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "i18next": "^25.6.0",
     "react": "19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^16.1.0",
     "react-native": "0.81.4",
     "react-native-calendars": "^1.1312.1",
     "react-native-draggable-flatlist": "^4.0.3",
