multilanguage added completely

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "updaate": "npx expo install --fix",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "eas-apk": "eas build --platform android --profile preview",
@@ -23,7 +24,7 @@
     "@reduxjs/toolkit": "^2.8.1",
     "@types/react": "~19.1.10",
     "date-fns": "^4.1.0",
-    "expo": "^54.0.6",
+    "expo": "54.0.23",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.8",
     "expo-document-picker": "~14.0.7",
@@ -33,7 +34,7 @@
     "expo-linking": "~8.0.8",
     "expo-localization": "~17.0.7",
     "expo-print": "~15.0.7",
-    "expo-router": "~6.0.3",
+    "expo-router": "~6.0.14",
     "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -41,7 +42,7 @@
     "react": "19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^16.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-calendars": "^1.1312.1",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.28.0",
