--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
     "@reduxjs/toolkit": "^2.8.1",
     "@types/react": "~19.1.10",
     "date-fns": "^4.1.0",
-    "expo": "54.0.23",
-    "expo-clipboard": "~8.0.7",
+    "expo": "~54.0.30",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.8",
-    "expo-document-picker": "~14.0.7",
+    "expo-document-picker": "~14.0.8",
     "expo-font": "~14.0.8",
-    "expo-image-picker": "~17.0.8",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~8.0.8",
-    "expo-localization": "~17.0.7",
-    "expo-print": "~15.0.7",
-    "expo-router": "~6.0.14",
-    "expo-sharing": "~14.0.7",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
+    "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.11",
+    "expo-localization": "~17.0.8",
+    "expo-print": "~15.0.8",
+    "expo-router": "~6.0.21",
+    "expo-sharing": "~14.0.8",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
     "i18next": "^25.6.0",
     "react": "19.1.0",
     "react-dom": "^19.1.0",
